# mjpg-streamer

mjpg-streamer-experimental/plugins/input_opencv/: CMakeLists.txt  input_opencv.cpp  input_opencv.h
